--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
   <body>
     <h1>Portfolio Page</h1>
-    <p>added a paragraph
-    </p>
+    <p>added a paragraph</p>
   </body>
 </html>
