--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Steve Crabtree</title>
-    <link rel="stylesheet" href="./style.css" />
-    <script src="./main.js" defer></script>
+    <title>Portfilio website - Projects</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Portfolio Page</h1>
+    <script src="main.js"></script>
   </body>
 </html>
