--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfilio website - Projects</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <i class="fa-sharp fa-solid fa-angles-down fa-2xl"></i>
+    <i class="fa-solid fa-check-double fa-2xl"></i>
+    <i class="fa-regular fa-envelope fa-xl"></i>
+    <i class="fa-brands fa-github fa-xl"></i>
+    <i class="fa-brands fa-linkedin fa-xl"></i>
+    <i class="fa-regular fa-address-card fa-xl"></i>
+    <i class="fa-solid fa-code-fork fa-xl"></i>
     <script src="main.js"></script>
   </body>
 </html>
