--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <i class="fa-sharp fa-solid fa-angles-down fa-2xl"></i>
+    <!-- Icons for future use -->
+    <!-- <i class="fa-sharp fa-solid fa-angles-down fa-2xl"></i>
     <i class="fa-solid fa-check-double fa-2xl"></i>
     <i class="fa-regular fa-envelope fa-xl"></i>
     <i class="fa-brands fa-github fa-xl"></i>
     <i class="fa-brands fa-linkedin fa-xl"></i>
     <i class="fa-regular fa-address-card fa-xl"></i>
     <i class="fa-solid fa-code-fork fa-xl"></i>
-    <script src="main.js"></script>
+    <script src="main.js"></script> -->
   </body>
 </html>
